# BedClock

./: .gitignore  README.md
01 System/: .$Bedclock ESP-IDF architecture.drawio.bkp  .$Bedclock ESP-IDF architecture.drawio.dtmp  Auto intensity calculation example.xlsx  Bedclock ESP-IDF architecture.drawio  Calculations.ods  Nachtlampje system.odt  Projectplan.ods  Projectplan.xlsx  Reorganize architecture (work in progress).ods
01 System/Debounce capacitive sensors/: Debounce capacitive sensors.ipynb  Result from median kernel 3.txt  Signal from top sensor.txt
01 System/Move profiles/: Click profile.xls  Dynamic movement.ods  Profile definitions V2.ods  Spring profile.xls  move profiles.py
02 User interface/: NoRain.xbm  User interface states.ods
02 User interface/Full U8G2 font list/: Height and width of many TF fonts.ods
02 User interface/HTML button tag_files/: 20MF002_Strength_970x250_v2.js.download  async-ads.js.download  container(1).html  container(2).html  container(5).html  f(13).txt  f(15).txt  f(6).txt  gpt.js.download  index.html  j-4450029-2960695.js.download  main.js.download  pixel(2).html  pixel(4).html  pixel.html  saved_resource  saved_resource(1)  saved_resource(5).html  snhb-w3schools.com.min.js.download  (+1 more)
03 Mechanical/: Bottom.stl  Bridge.stl  Display 0.91'' 128x32 ST1306.FCStd  LEDs.stl  Lightcover.stl  NightLight rotary.FCStd  Table.stl  Top.stl  WS2812B 4x4.FCStd
04_Software/: Porting to ESP-IDF.xlsx  files.py  readme.md  readme.txt  ~$Porting to ESP-IDF.xlsx
04_Software/Bedclock_IDF_V08/component/led_strip_encoder/: CMakeLists.txt
(+571 files in other folders)
